fix: padding on small viewport

--- a/components/o-topper/src/scss/themes/_deep-landscape.scss
+++ b/components/o-topper/src/scss/themes/_deep-landscape.scss
@@ -54,7 +54,7 @@
 	@include oGridRespondTo( $until:S) {
 		.o-topper__content {
 			width:100%;
-			padding:20px;
+			padding:20px 20px 0 20px;
 		}
 	}
 
